--- a/service.yaml
+++ b/service.yaml
@@ -3,7 +3,7 @@ Description: >
 
 Parameters:
     DockerImage:
-        Description:  123456789.dkr.ecr.us-east-1.amazonaws.com/YOUR-REGISTRY-HERE:git-hash
+        Description:  107936300658.dkr.ecr.us-west-2.amazonaws.com/example-webapp:git-hash
         Type: String
 
     VPC:
